* Wed Dec 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Renamed the global catalyst 'client_nets' to 'trusted_nets'.

* Wed Nov 09 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.0-0
- Fixed bug in the set provider for the xt_recent type that required manual
  modifications to the permissions for the /sys/module/xt_recent/parameters/*
  files, in order for the scanblock capability to be enabled.
- Fixed bugs in the xt_recent type and its set provider that caused
  Puppet to believe /sys/module/xt_recent/parameters/ip_list_perms
  file content had changed when it had not.
- Eliminated use of deprecated Puppet.newtype
- Updated to compliance_markup version 2

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.5-0
- Updated the ip6tables_optimize provider so that it works in Puppet 4

* Fri Aug 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.4-0
- Ensure that the SELinux context on the init scripts is correct so that the
  runs are idempotent

* Thu Jul 07 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.3-0
- Fixed an issue with the remote lookup regular expression processing in Ruby
  1.8

* Mon May 16 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.2-0
- Sanitized fact references to run under `STRICT_VARIABLES=yes`

* Wed Apr 13 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.1.1-0
- Changed default provider of services to redhat

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.1.0-17
- Removed custom type deprecation warning

* Fri Feb 19 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-16
- Added compliance function support

* Tue Jan 26 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-15
- Normalized common static module assets

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-14
- migration to simplib and simpcat (lib/ only)

* Mon Jul 27 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-13