@@ -1,3 +1,6 @@
+* Thu Jan 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.1-0
+- Added a feature to add resources via hiera
+
 * Wed Dec 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
 - Renamed the global catalyst 'client_nets' to 'trusted_nets'.
 
